--- a/examples/react-native/package.json
+++ b/examples/react-native/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "1.12.2",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-app-auth": "8.0.3",
