--- a/examples/react-native/.env
+++ b/examples/react-native/.env
@@ -1,6 +1,6 @@
-KEYCLOAK_URL=http://localhost:8080
-KEYCLOAK_REALM=my-realm
-KEYCLOAK_CLIENT_ID=my-client-id
-KEYCLOAK_REDIRECT_URI=rnexpo://home
+OIDC_URL=http://localhost:8080
+OIDC_REALM=my-realm
+OIDC_CLIENT_ID=my-client-id
+OIDC_REDIRECT_URI=rnexpo://home
 API_URL=http://localhost:8081
 ENV=development
