--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     ]
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "publish-packages": "lerna publish"
   },
   "author": "pratalex",
   "license": "MIT",
