--- a/packages/react-native-oidc-auth/package.json
+++ b/packages/react-native-oidc-auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-oidc-auth",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Bare React Native implementation using react-native-app-auth and react-native-keychain.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -38,22 +38,22 @@
     "react-native-keychain": ">=10.0.0"
   },
   "dependencies": {
-    "react-native-oidc-auth-core": "^0.1.0"
+    "react-native-oidc-auth-core": "^0.1.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.27.1",
     "@react-native-community/eslint-config": "^3.2.0",
     "@react-native/babel-preset": "^0.80.2",
     "@types/react": "~19.1.0",
+    "axios": "^1.12.2",
     "eslint": "^9.0.0",
     "prettier": "^3.6.2",
-    "resolve-tspaths": "^0.8.23",
-    "typescript": "~5.9.2",
-    "axios": "^1.12.2",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-app-auth": "^8.0.3",
-    "react-native-keychain": "^10.0.0"
+    "react-native-keychain": "^10.0.0",
+    "resolve-tspaths": "^0.8.23",
+    "typescript": "~5.9.2"
   },
   "keywords": [
     "oauth2",
