--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "publish-packages": "lerna publish",
-    "version-packages": "lerna version",
-    "prepare": "tsc"
+    "version-packages": "lerna version"
   },
   "author": "pratalex",
   "license": "MIT",
